ignored tmp folder

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@ lightning_logs*
 trained_models*
 .vscode
 plots/experiment_results.pickl
+plots/softm
 plots_*
+inspect*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
