--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,7 @@ tensorboard==2.3.0
 tensorboard-plugin-wit==1.7.0
 toml==0.10.1
 torch==1.6.0
-torchvision==0.7.0+cu92
+torchvision==0.7.0
 tqdm==4.50.2
 traitlets==4.3.3
 urllib3==1.25.11
