--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.0.0
+pingouin==0.3.10
 prompt-toolkit==3.0.8
 protobuf==3.13.0
 ptyprocess==0.6.0
